# AdaMem

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: dynamic_state_transfer.jsonl  employer_dependency_transfer.jsonl  employer_state_transfer.jsonl  location_dependency_transfer.jsonl  locomo_mini.json  stale_mini.jsonl  tiny_memory_qa.jsonl  unknown_current_state_transfer.jsonl
docs/: benchmark_data_status.md  benchmark_readiness.md  design.md  literature_to_design.md  progress_log.md  real_evaluation_quickstart.md  research_workflow.md
src/adamem/: __init__.py  answer_eval.py  baselines.py  bench.py  claims.py  cli.py  compare.py  config.py  convert.py  demo_html.py  diagnostics.py  error_taxonomy.py  eval.py  experiments.py  llm.py  lme_v2.py  manager.py  pilot.py  reporting.py  schema.py  stale_pipeline.py  state.py  state_diagnostics.py  store.py  study_plan.py  tables.py  text.py
tests/: test_adamem.py  test_answer_eval.py  test_claims.py  test_cli.py  test_compare.py  test_eval.py  test_experiments.py  test_lme_v2.py  test_pilot.py  test_reporting.py  test_stale.py  test_stale_pipeline.py  test_study_plan.py  test_tables.py
