[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "adamem"
version = "0.1.0"
description = "A minimal plug-and-play adaptive memory layer for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AdaMem contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
adamem = "adamem.cli:main"
adamem-eval = "adamem.eval:main"
adamem-convert = "adamem.convert:main"
adamem-pilot = "adamem.pilot:main"
adamem-tables = "adamem.tables:main"
adamem-answer-eval = "adamem.answer_eval:main"
adamem-claims = "adamem.claims:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
